<resources>
    <string name="app_name">Alertless</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="list_all_button">List Users</string>
    <string name="show_time_picker">Time</string>
    <string name="show_date_picker">Date</string>
    <string name="next_activity_btn">Schedule</string>
    <string name="save_schedule">save schedule</string>
    <string name="profile_editor">Profile Editor</string>
    <string name="week_days_btn">Week Days</string>
    <string name="week_schedule_valid_from_btn_text">Valid From</string>
    <string name="week_schedule_valid_till_btn_text">Valid Till</string>

    <string name="start_time_btn_text">Start Time</string>
    <string name="end_time_btn_text">End Time</string>
</resources>
